; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby-json/src/extr_parson.c_json_serialize_to_file_pretty.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby-json/src/extr_parson.c_json_serialize_to_file_pretty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JSONSuccess = common dso_local global i32 0, align 4
@JSONFailure = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"w\00", align 1
@EOF = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @json_serialize_to_file_pretty(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i32, i32* @JSONSuccess, align 4
  store i32 %9, i32* %6, align 4
  store i32* null, i32** %7, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i8* @json_serialize_to_string_pretty(i32* %10)
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @JSONFailure, align 4
  store i32 %15, i32* %3, align 4
  br label %44

16:                                               ; preds = %2
  %17 = load i8*, i8** %5, align 8
  %18 = call i32* @fopen(i8* %17, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %18, i32** %7, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = load i8*, i8** %8, align 8
  %23 = call i32 @json_free_serialized_string(i8* %22)
  %24 = load i32, i32* @JSONFailure, align 4
  store i32 %24, i32* %3, align 4
  br label %44

25:                                               ; preds = %16
  %26 = load i8*, i8** %8, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = call i64 @fputs(i8* %26, i32* %27)
  %29 = load i64, i64* @EOF, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %25
  %32 = load i32, i32* @JSONFailure, align 4
  store i32 %32, i32* %6, align 4
  br label %33

33:                                               ; preds = %31, %25
  %34 = load i32*, i32** %7, align 8
  %35 = call i64 @fclose(i32* %34)
  %36 = load i64, i64* @EOF, align 8
  %37 = icmp eq i64 %35, %36
  br i1 %37, label %38, label %40

38:                                               ; preds = %33
  %39 = load i32, i32* @JSONFailure, align 4
  store i32 %39, i32* %6, align 4
  br label %40

40:                                               ; preds = %38, %33
  %41 = load i8*, i8** %8, align 8
  %42 = call i32 @json_free_serialized_string(i8* %41)
  %43 = load i32, i32* %6, align 4
  store i32 %43, i32* %3, align 4
  br label %44

44:                                               ; preds = %40, %21, %14
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i8* @json_serialize_to_string_pretty(i32*) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @json_free_serialized_string(i8*) #1

declare dso_local i64 @fputs(i8*, i32*) #1

declare dso_local i64 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
